k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiopro-ingress
  namespace: audiopro
  labels:
    project: audiopro-ecommerce
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          # ── USER SERVICE ──
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001

          - path: /api/password
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001

          - path: /api/contact
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001

          # ── PRODUCT SERVICE ──
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5002

          - path: /api/ratings
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5002

          - path: /api/wishlist
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5002

          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 5002

          # ── ORDER SERVICE ──
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5003

          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 5005

          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5006

          # ── MCP SERVICE ──
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: mcp-service
                port:
                  number: 5004

          # ── FRONTEND (CATCH-ALL) ──
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
